crates/rstest-bdd-macros/tests/fixtures/step_tuple_pattern.stderr
error: invalid step function signature: unsupported parameter pattern; use a simple identifier (e.g., `arg: T`). help: use `#[given] fn name(...args...)` with supported step arguments/fixtures; remove self.
 --> tests/fixtures/step_tuple_pattern.rs:8:20
  |
8 | fn step_with_tuple((x, y): (i32, i32)) {}
  |                    ^^^^^^
  |
  = help: Use `#[given] fn name(ctx: &rstest_bdd::StepContext, ...)` and valid fixtures.
